Issue #4: Dark Mode 1.0 (#7)
* DarkMode1.0: Added css support for dark mode

* DarkMode1.0: CSS Improvements on Card and Navbar

* DarkMode1.0: 90% Dark mode changes complete

* DarkMode1.0: Navbar customizations complete

* DarkMode1.0: Skills tab customized for dark mode

* DarkMode1.0: added dark mode on feedback form

--- a/src/Views/Custom/TabViewSkills.css
+++ b/src/Views/Custom/TabViewSkills.css
@@ -1,21 +1,9 @@
-.tabsMain{
-    border-radius: 10%;
-    background-color: aliceblue;
-    box-shadow: 0px 5px 15px rgb(232, 232, 232);
-}
-
-/* .inline {
-    display: flex;
-} */
-
 .icon-grid {
     display: grid;
     gap: 1px;
     grid-template-columns: repeat(3, 1fr);
-  }
+}
 
-
-/* - PrimeReact TabView Custom Styles - */
 .p-tabview-title {
     font-weight: lighter;
 }
@@ -23,14 +11,19 @@
 .p-tabview-nav {
     padding-top: 10px;
     padding-left: 5px;
-    background-color: #d4e9f6 !important;
+    background-color: #94d4ea !important;
     box-shadow: 0px 2px 5px rgb(193, 193, 193);
     border-bottom: none !important;
 }
 
-.p-tabview-nav-link {
-    background-color: #d4e9f6 !important;
-    padding: 8px !important;
+.tab-container {
+    border: 1px solid #3da0de87;
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+}
+
+.tabsMain {
+    border-radius: 10%;
 }
 
 .p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
@@ -39,27 +32,59 @@
     box-shadow: none !important;
 }
 
-.p-tabview-selected .p-tabview-nav-link .p-tabview-title{
+.p-tabview-selected .p-tabview-nav-link .p-tabview-title {
     color: #3da0de;
-    /* border-bottom: 2px solid lightcoral; */
-}
-
-.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
-    background-color: #ffffff !important;
-    border: none;
 }
 
 
 .p-tabview-nav {
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;  
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
 }
 
-.p-highlight{
-    border-bottom: 4px solid #ffffff;
 
-}
 
 .flex-items-3 {
     flex-basis: 33.333333%;
+}
+
+.p-tabview-nav-link {
+    background-color: #8fbac8 !important;
+    border: none !important;
+    padding: 8px !important;
+    margin-right: 2px !important;
+    margin-bottom: -4px;
+}
+
+.p-highlight {
+    border-bottom: 4px solid #94d4ea;
+}
+
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
+    background-color: var(--background-color-light) !important;
+    margin-right: 2px !important;
+}
+
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
+    background-color: var(--background-color-light) !important;
+    margin-right: 2px !important;
+}
+
+/* Dark Mode specific settings */
+.dark-tabs .p-tabview-panels {
+    background-color: var(--background-color-dark) !important;
+}
+
+
+/* Light Mode specific settings */
+.light-tabs .p-tabview-panels {
+    background-color: var(--background-color-light) !important;
+}
+
+.dark-icon-text {
+    color: var(--text-dark);
+}
+
+.light-icon-text {
+    color: var(--text-light);
 }
