--- a/src/Views/Portfolio.css
+++ b/src/Views/Portfolio.css
@@ -4,7 +4,19 @@
 /* Blue: #3da0de */
 /* Blog Yellow Heading: #dec33d */
 
-*{
+:root {
+    --dot-pattern-dark: #ffffff;
+    --background-color-dark: #2b2b2b;
+    --dot-pattern-light: #2b2b2b;
+    --background-color-light: #ffffff;
+    --text-dark: #ffffff;
+    --text-light: #2b2b2b;
+    --navbar-dark: #2b2b2b;
+    --navbar-text-light: #2b2b2b;
+    --navbar-text-dark: #ffffff;
+}
+
+* {
     font-family: 'IBM Plex Sans';
 }
 
@@ -12,12 +24,21 @@
     margin-top: 600px;
 }
 
-.portfolioContainer{
-    background: linear-gradient(90deg, #ffffff 21px, transparent 1%) center, linear-gradient(#ffffff 21px, transparent 1%) center, #0c306d;
+.light {
+    background: linear-gradient(90deg, var(--background-color-light) 21px, transparent 1%) center,
+        linear-gradient(var(--background-color-light) 21px, transparent 1%) center,
+        var(--dot-pattern-light);
     background-size: 22px 22px;
 }
 
-.navbar-container{
+.dark {
+    background: linear-gradient(90deg, var(--background-color-dark) 21px, transparent 1%) center,
+        linear-gradient(var(--background-color-dark) 21px, transparent 1%) center,
+        var(--dot-pattern-dark);
+    background-size: 22px 22px;
+}
+
+.navbar-container {
     display: flex;
     justify-content: center;
 }
@@ -37,7 +58,9 @@
 }
 
 @media (min-width: 600px) {
-    .cards { grid-template-columns: repeat(2, 1fr); }
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .landingText {
@@ -45,7 +68,7 @@
 }
 
 code {
-    color:#3dbbde;
+    color: #3dbbde;
 }
 
 code.darkMode {
@@ -55,8 +78,18 @@ code.darkMode {
 .sectionHeaderContainer {
     display: flex;
     justify-content: center;
-    background-color: white;
 }
+
+.sectionHeaderContainer-dark {
+    background: var(--background-color-dark) !important;
+    color: var(--text-dark);
+}
+
+.sectionHeaderContainer-light {
+    background: var(--background-color-light) !important;
+    color: var(--text-light);
+}
+
 
 .sectionHeader {
     font-size: 55px;
@@ -66,38 +99,59 @@ code.darkMode {
 }
 
 
-@media only screen and (width < 600px) { 
+@media only screen and (width < 600px) {
     .sectionHeader {
         font-size: 40px;
         margin-top: 100px;
         margin-bottom: 40px;
-    
+
     }
 }
 
-.clearFormatting{
-    background-color: white;
+.clearFormatting-dark {
+    background-color: transparent;
     border: none;
     transition: 0.3s;
+    color: var(--text-dark);
 }
 
-.clearFormatting:hover {
-    background-color: #3da0de;
+.clearFormatting-light {
+    background-color: transparent;
+    border: none;
+    transition: 0.3s;
+    color: var(--text-light);
 }
 
-.liked{
-    background-color: white;
+.likeEnabled:hover {
+    color: red;
+}
+
+
+.liked {
     border: none;
     color: red;
 }
 
 .footerContent {
-    background-color: #ffffff;
     padding: 5px 40px 5px 40px;
-    border: 1px solid #ffffff;
     border-radius: 35px;
-    box-shadow: 0px 2px 5px #ebebeb;
+
 }
+
+.footer-dark {
+    color: var(--text-dark);
+    background-color: var(--background-color-dark);
+    border: 1px solid var(--background-color-dark);
+    box-shadow: 0px 2px 5px var(--background-color-dark);
+}
+
+.footer-light {
+    color: var(--text-light);
+    background-color: var(--background-color-light);
+    border: 1px solid var(--background-color-light);
+    box-shadow: 0px 2px 5px var(--background-color-light);
+}
+
 #footer {
     display: flex;
     justify-content: center;
@@ -105,7 +159,7 @@ code.darkMode {
 
 .author {
     border: none;
-    background-color: inherit;
+    background-color: transparent;
     color: #3da0de;
     transition: 0.5s;
 }
@@ -135,6 +189,7 @@ code.darkMode {
 .disabled:hover {
     background-color: rgb(255, 255, 255);
 }
+
 button.likeDisabled {
     color: rgb(228, 107, 107);
 }
